--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <header>
-        <h1>Exercício 2</h1>
+    <header class="header">
+        <h1>Dicionario de Tags HTML</h1>
         <p>Construa um dicionário HTML com os principais elementos que você conhece.</p>
     </header>
 
@@ -25,9 +25,9 @@
             <p>Os principais elementos HTML que conheço são:</p>
 
             <div>
-                <h3>"html"</h3>
+                <h3>HTML</h3>
                 <p>Define o início e o fim de um documento HTML</p>
-                <img src="" alt="" />
+                <img src="/images/html.png" alt="imagem da tag html" />
             </div>
             <ul>
                 <li><strong>head</strong> - Define informações sobre o documento</li>
