Update HTML tag in index.html for better clarity

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p>Os principais elementos HTML que conheço são:</p>
 
             <div>
-                <h3>HTML</h3>
+                <h3>&lt;HTML&gt;</h3>
                 <p>Define o início e o fim de um documento HTML</p>
                 <img src="/images/html.png" alt="imagem da tag html" />
             </div>
