chore: Update CSS styles and HTML structure for better readability and responsiveness

--- a/index.html
+++ b/index.html
@@ -15,30 +15,82 @@
 </head>
 <body>
     <header class="header">
-        <h1>Dicionario de Tags HTML</h1>
-        <p>Construa um dicionário HTML com os principais elementos que você conhece.</p>
+        <h1>Dicionario de <span>Tags HTML<span></h1>
+        <p>Construindo um dicionário HTML com os principais elementos que nos conhecemos.</p>
     </header>
 
-    <main>
+    <main class="py-3">
         <section>
-            <h2>Elementos HTML</h2>
-            <p>Os principais elementos HTML que conheço são:</p>
+            <div class="container">
+                <h2>Elementos HTML</h2>
+                <p class="lead">Os principais elementos HTML que conheço são:</p>
+    
+                <div class="py-1">
+                    <h3>&lt;HTML&gt;</h3>
+                    <p class="lead">Define o início e o fim de um documento HTML</p>
+                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+                </div>
 
-            <div>
-                <h3>&lt;HTML&gt;</h3>
-                <p>Define o início e o fim de um documento HTML</p>
-                <img src="/images/html.png" alt="imagem da tag html" />
+                <div class="py-1">
+                    <h3>&lt;head&gt;</h3>
+                    <p class="lead">Define informações sobre o documento<</p>
+                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+                </div>
+
+                <div class="py-1">
+                    <h3>&lt;title&gt;</h3>
+                    <p class="lead">Define o título do documento</p>
+                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+                </div>
+
+                <div class="py-1">
+                    <h3>&lt;body&gt;</h3>
+                    <p class="lead">Define o corpo do documento</p>
+                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+                </div>
+
+                <div class="py-1">
+                    <h3>&lt;h1&gt; a &lt;h6&gt;</h3>
+                    <p class="lead">Define títulos de diferentes niveis de importãncia</p>
+                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+                </div>
+
+                <div class="py-1">
+                    <h3>&lt;p&gt;</h3>
+                    <p class="lead">Define um parágrafo</p>
+                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+                </div>
+
+                <div class="py-1">
+                    <h3>&lt;ul&gt;</h3>
+                    <p class="lead">Define uma lista não ordenada</p>
+                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+                </div>
+
+                <div class="py-1">
+                    <h3>&lt;li&gt;</h3>
+                    <p class="lead">Define um item de lista</p>
+                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+                </div>
+
+                <div class="py-1">
+                    <h3>&lt;strong&gt;</h3>
+                    <p class="lead">Define um texto em negrito</p>
+                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+                </div>
+
+                <div class="py-1">
+                    <h3>&lt;a&gt;</h3>
+                    <p class="lead">Define um link</p>
+                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+                </div>
+
+                <div class="py-1">
+                    <h3>&lt;img&gt;</h3>
+                    <p class="lead">Define uma imagem</p>
+                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+                </div>
             </div>
-            <ul>
-                <li><strong>head</strong> - Define informações sobre o documento</li>
-                <li><strong>title</strong> - Define o título do documento</li>
-                <li><strong>body</strong> - Define o corpo do documento</li>
-                <li><strong>h1</strong> - Define um cabeçalho</li>
-                <li><strong>p</strong> - Define um parágrafo</li>
-                <li><strong>ul</strong> - Define uma lista não ordenada</li>
-                <li><strong>li</strong> - Define um item de lista</li>
-                <li><strong>strong</strong> - Define um texto em negrito</li>
-            </ul>
         </section>
     </main>
 </body>
