Update CSS styles and HTML structure for better readability and responsiveness

--- a/index.html
+++ b/index.html
@@ -13,81 +13,113 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
     <header class="header">
         <h1>Dicionario de <span>Tags HTML<span></h1>
         <p>Construindo um dicionário HTML com os principais elementos que nos conhecemos.</p>
     </header>
 
-    <main class="py-3">
+    <main class="py-2">
         <section>
             <div class="container">
                 <h2>Elementos HTML</h2>
                 <p class="lead">Os principais elementos HTML que conheço são:</p>
     
-                <div class="py-1">
-                    <h3>&lt;HTML&gt;</h3>
-                    <p class="lead">Define o início e o fim de um documento HTML</p>
+                <div class="py-1 tag">
+                    <h3 class="subtitle">&lt;HTML&gt;</h3>
+                    <p class="lead"> 
+                        - Todos os documentos HTML devem começar com uma declaração de 
+                        tipo de documento: &lt;DOCTYPE html&gt;.
+                    </p>
+                    <p class="lead">
+                        - O elemento HTML é o elemento raiz de uma página HTML e 
+                        contém todo o conteúdo da página, como cabeçalhos, parágrafos, 
+                        imagens, hiperlinks, tabelas, listas, etc.
+                    </p>
+                    <p class="lead">
+                        - O próprio documento HTML começa com &lt;html&gt; e termina com &lt;/html&gt;.
+                    </p>
+                    <p class="lead">
+                        - A parte visível do documento HTML está entre &lt;body&gt; e &lt;/body&gt;.
+                    </p>
                     <img class="image" src="/images/html.png" alt="imagem da tag html" />
                 </div>
 
-                <div class="py-1">
-                    <h3>&lt;head&gt;</h3>
-                    <p class="lead">Define informações sobre o documento<</p>
+                <div class="py-1 tag my-1">
+                    <h3 class="subtitle">&lt;head&gt;</h3>
+
+                    <p class="lead">
+                        - Define informações sobre o documento.
+                    </p>
+
+                    <p class="lead">
+                        - O elemento &lt;head&gt; contém metadados do documento, como 
+                        título, links para estilos, scripts e outras metainformações.
+                    </p>
+
+                    <img class="image" src="/images/head.png" alt="imagem da tag html"/>
+                </div>
+
+                <div class="py-1  tag my-1">
+                    <h3 class="subtitle">&lt;title&gt;</h3>
+
+                    <p class="lead">
+                        - Define o título do documento
+                    </p>
+                    
                     <img class="image" src="/images/html.png" alt="imagem da tag html" />
                 </div>
 
-                <div class="py-1">
-                    <h3>&lt;title&gt;</h3>
-                    <p class="lead">Define o título do documento</p>
-                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
-                </div>
-
-                <div class="py-1">
-                    <h3>&lt;body&gt;</h3>
+                <div class="py-1  tag my-1">
+                    <h3 class="subtitle">&lt;body&gt;</h3>
                     <p class="lead">Define o corpo do documento</p>
                     <img class="image" src="/images/html.png" alt="imagem da tag html" />
                 </div>
 
-                <div class="py-1">
-                    <h3>&lt;h1&gt; a &lt;h6&gt;</h3>
+                <div class="py-1  tag my-1">
+                    <h3 class="subtitle">&lt;h1&gt; a &lt;h6&gt;</h3>
                     <p class="lead">Define títulos de diferentes niveis de importãncia</p>
                     <img class="image" src="/images/html.png" alt="imagem da tag html" />
                 </div>
 
-                <div class="py-1">
-                    <h3>&lt;p&gt;</h3>
+                <div class="py-1  tag my-1">
+                    <h3 class="subtitle">&lt;p&gt;</h3>
                     <p class="lead">Define um parágrafo</p>
                     <img class="image" src="/images/html.png" alt="imagem da tag html" />
                 </div>
 
-                <div class="py-1">
-                    <h3>&lt;ul&gt;</h3>
+                <div class="py-1  tag my-1">
+                    <h3 class="subtitle">&lt;ul&gt;</h3>
                     <p class="lead">Define uma lista não ordenada</p>
                     <img class="image" src="/images/html.png" alt="imagem da tag html" />
                 </div>
 
-                <div class="py-1">
-                    <h3>&lt;li&gt;</h3>
+                <div class="py-1  tag my-1">
+                    <h3 class="subtitle">&lt;li&gt;</h3>
                     <p class="lead">Define um item de lista</p>
                     <img class="image" src="/images/html.png" alt="imagem da tag html" />
                 </div>
 
-                <div class="py-1">
-                    <h3>&lt;strong&gt;</h3>
+                <div class="py-1  tag my-1">
+                    <h3 class="subtitle">&lt;strong&gt;</h3>
                     <p class="lead">Define um texto em negrito</p>
                     <img class="image" src="/images/html.png" alt="imagem da tag html" />
                 </div>
 
-                <div class="py-1">
-                    <h3>&lt;a&gt;</h3>
+                <div class="py-1  tag my-1">
+                    <h3 class="subtitle">&lt;a&gt;</h3>
                     <p class="lead">Define um link</p>
                     <img class="image" src="/images/html.png" alt="imagem da tag html" />
                 </div>
 
-                <div class="py-1">
-                    <h3>&lt;img&gt;</h3>
-                    <p class="lead">Define uma imagem</p>
+                <div class="py-1  tag my-1">
+                    <h3 class="subtitle">&lt;img&gt;</h3>
+
+                    <p class="lead">
+                        - Define uma imagem
+                    </p>
+
                     <img class="image" src="/images/html.png" alt="imagem da tag html" />
                 </div>
             </div>
