Update CSS styles and HTML structure for better readability and responsiveness

--- a/index.html
+++ b/index.html
@@ -67,13 +67,21 @@
                     <p class="lead">
                         - Define o título do documento
                     </p>
-                    
-                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+
+                    <img class="image" src="/images/title.png" alt="imagem da tag html" />
                 </div>
 
                 <div class="py-1  tag my-1">
                     <h3 class="subtitle">&lt;body&gt;</h3>
-                    <p class="lead">Define o corpo do documento</p>
+
+                    <p class="lead">
+                        - Define o corpo do documento
+                    </p>
+
+                    <p class="lead">
+                        - O elemento &lt;body&gt; contém todo o conteúdo de um documento HTML, 
+                        como texto, hiperlinks, imagens, tabelas, listas, etc.
+                    </p>
                     <img class="image" src="/images/html.png" alt="imagem da tag html" />
                 </div>
 
