Update HTML structure and content for better clarity and readability

--- a/index.html
+++ b/index.html
@@ -82,37 +82,79 @@
                         - O elemento &lt;body&gt; contém todo o conteúdo de um documento HTML, 
                         como texto, hiperlinks, imagens, tabelas, listas, etc.
                     </p>
-                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+
+                    <img class="image" src="/images/body.png" alt="imagem da tag html" />
                 </div>
 
                 <div class="py-1  tag my-1">
                     <h3 class="subtitle">&lt;h1&gt; a &lt;h6&gt;</h3>
-                    <p class="lead">Define títulos de diferentes niveis de importãncia</p>
-                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+
+                    <p class="lead">
+                        - Define títulos de diferentes niveis de importãncia.
+                    </p>
+
+                    <p class="lead">
+                        - O elemento &lt;h1&gt; define o título mais importante. 
+                        O elemento &lt;h6&gt; define o título menos importante.
+                    </p>
+
+                    <img class="image" src="/images/h1.png" alt="imagem da tag html" />
                 </div>
 
                 <div class="py-1  tag my-1">
                     <h3 class="subtitle">&lt;p&gt;</h3>
-                    <p class="lead">Define um parágrafo</p>
-                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+
+                    <p class="lead">
+                        - O elemento &lt;p&gt; define um parágrafo.
+                    </p>
+
+                    <p class="lead">
+                        - Um parágrafo sempre começa em uma nova linha e é um bloco de texto.
+                    </p>
+                    <img class="image" src="/images/p.png" alt="imagem da tag html" />
                 </div>
 
                 <div class="py-1  tag my-1">
                     <h3 class="subtitle">&lt;ul&gt;</h3>
-                    <p class="lead">Define uma lista não ordenada</p>
-                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+
+                    <p class="lead">
+                        - Define uma lista não ordenada
+                    </p>
+
+                    <p class="lead">
+                        - O elemento &lt;ul&gt; define uma lista não ordenada. 
+                        Um item de lista é definido com o elemento &lt;li&gt;.
+                    </p>
+
+                    <img class="image" src="/images/ul.png" alt="imagem da tag html" />
                 </div>
 
                 <div class="py-1  tag my-1">
                     <h3 class="subtitle">&lt;li&gt;</h3>
-                    <p class="lead">Define um item de lista</p>
-                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+
+                    <p class="lead">
+                        - O elemento &lt;li&gt; é usado para definir um item em uma lista.
+                    </p>
+
+                    <p class="lead">
+                        - É um elemento de nível de bloco.
+                    </p>
+
+                    <img class="image" src="/images/ul.png" alt="imagem da tag html" />
                 </div>
 
                 <div class="py-1  tag my-1">
                     <h3 class="subtitle">&lt;strong&gt;</h3>
-                    <p class="lead">Define um texto em negrito</p>
-                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+
+                    <p class="lead">
+                        - O elemento &lt;strong&gt; é usado para definir um texto importante.
+                    </p>
+
+                    <p class="lead">
+                        - O texto dentro do elemento &lt;strong&gt; é exibido em negrito.
+                    </p>
+
+                    <img class="image" src="/images/strong.png" alt="imagem da tag html" />
                 </div>
 
                 <div class="py-1  tag my-1">
