Update HTML structure and content for better clarity and readability

--- a/index.html
+++ b/index.html
@@ -159,18 +159,36 @@
 
                 <div class="py-1  tag my-1">
                     <h3 class="subtitle">&lt;a&gt;</h3>
-                    <p class="lead">Define um link</p>
-                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+
+                    <p class="lead">
+                        - O elemento &lt;a&gt; define um hiperlink, que é usado para 
+                        vincular de uma página para outra.
+                    </p>
+
+                    <p class="lead">
+                        - O atributo href especifica o URL da página para a qual o link 
+                        vai.
+                    </p>
+                    <img class="image" src="/images/a.png" alt="imagem da tag html" />
                 </div>
 
                 <div class="py-1  tag my-1">
                     <h3 class="subtitle">&lt;img&gt;</h3>
 
                     <p class="lead">
-                        - Define uma imagem
+                        - O elemento &lt;img&gt; é usado para incorporar uma imagem em um documento.
                     </p>
 
-                    <img class="image" src="/images/html.png" alt="imagem da tag html" />
+                    <p class="lead">
+                        - O elemento &lt;img&gt; é um elemento vazio, o que significa 
+                        que ele não tem um elemento de fechamento.
+                    </p>
+
+                    <p class="lead">
+                        - Ele contém apenas atributos e não contém texto ou elementos filho.
+                    </p>
+
+                    <img class="image" src="/images/img.png" alt="imagem da tag html" />
                 </div>
             </div>
         </section>
