Adicionar dicionário HTML

--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@
                         - Ele contém apenas atributos e não contém texto ou elementos filho.
                     </p>
 
+                    <p class="lead">
+                        - O atributo src especifica o URL da imagem.
+                    </p>
+
                     <img class="image" src="/images/img.png" alt="imagem da tag html" />
                 </div>
             </div>
